cambios en imagenes de servicios, edicion en texto de packs, y edicion titulo RQS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="nav-logo d-flex align-items-center">
                 <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" class="d-block" width="80px"
                         alt="Logo"></a>
-                <p class="fw-bold fs-5">Producciones</p>
+                <p class="fw-bold fs-5">RQS Producciones</p>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -184,6 +184,7 @@
                         <div class="overlay">
                             <img src="./assets/img/dj-info.jpg" class="d-block w-100 p-2 border" alt="DJ">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
                 <!--audio-->
@@ -198,6 +199,7 @@
                         <div class="overlay">
                             <img src="./assets/img/audio-info.png" class="d-block w-100 p-2 border" alt="Parlante">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -213,6 +215,7 @@
                             <img src="./assets/img/illuminacion-info.jpg" class="d-block w-100 p-2 border"
                                 alt="Bola disco">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -229,6 +232,7 @@
                             <img src="./assets/img/pantallas-info.png" class="d-block w-100 p-2 border"
                                 alt="pantallas led">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -243,6 +247,7 @@
                         <div class="overlay">
                             <img src="./assets/img/robots-led.png" class="d-block w-100 p-2 border" alt="robot led">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -257,6 +262,7 @@
                         <div class="overlay">
                             <img src="./assets/img/fiestas.jpg" class="d-block w-100 p-2 border" alt="Efecto humo">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -272,6 +278,7 @@
                         <div class="overlay">
                             <img src="./assets/img/animacion.jpg" class="d-block w-100 p-2 border" alt="Microfono">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -288,6 +295,7 @@
                             <img src="./assets/img/banqueteria.jpeg" class="d-block w-100 p-2 border"
                                 alt="Mesa banquete">
                         </div>
+                        <div class="overlay-bg"></div>
                     </div>
                 </div>
 
@@ -427,8 +435,8 @@
             <div class="packs-text p-5 my-5 col-lg-4 col-md-8 col-sm-10 anim-fade-in anim-pause-2">
                 <h5 class="py-3"><em>Enriqueciendo aún más tu experiencia, ofrecemos servicios complementarios de
                         <span class="fw-bolder">Animación</span>
-                        y <span class="fw-bolder">Banquetería</span>.
-                        Los que añadirán un toque de distinción a tus eventos, asegurando momentos memorables.</em>
+                        y <span class="fw-bolder">Banquetería</span>.<br><br>
+                        ¡Añade un toque de distinción a tus eventos y asegura momentos memorables!</em>
                 </h5>
                 <div class="d-flex gap-2">
                     <img src="./assets/img/microfono.jpg" class="img-animacion d-block w-100" alt="animación eventos">
