--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-md navbar-custom">
         <div class="container">
             <div class="nav-logo d-flex align-items-center">
                 <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" class="d-block" width="80px"
@@ -45,7 +45,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav fs-5 ms-auto">
-                    <a class="nav-link text-secondary active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     <a class="nav-link" href="#servicios">Servicios</a>
                     <a class="nav-link" href="#packs">Packs</a>
                     <a class="nav-link" href="#galeria">Galería</a>
@@ -60,7 +60,7 @@
     <section class="header bg-primary">
         <div class="container title d-flex flex-column text-light justify-content-center mx-auto py-5">
             <div class="text-center pt-5 mt-3 title-1">
-                <h1 class="fw-bold pt-5 anim-down">ARRIENDO AUDIOVISUAL</h1>
+                <h1 class="fw-bold pt-5 anim-down mt-5">ARRIENDO AUDIOVISUAL</h1>
             </div>
             <div class="pb-5">
                 <p class="pb-2 fs-4 text-center text-black fw-bolder anim-fade-in anim-pause-1">Hacemos de tu evento un
@@ -78,6 +78,40 @@
             <source src="./assets/video/video-1.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
+        <div class="custom-shape-divider-bottom-1701560545">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M892.25 114.72L0 0 0 120 1200 120 1200 0 892.25 114.72z" class="shape-fill"></path>
+          </svg>
+      </div>
+    </section>
+
+
+    <!--bienvenido/nosotros-->
+    <section class="main py-3  paused" id="nosotros">
+      <div class="main-cont d-flex flex-wrap justify-content-evenly align-items-center py-5">
+
+          <div class="col-xl-4 col-md-6 main-img py-5 anim-right">
+              <img src="./assets/img/bienvenido.jpeg" class="w-100 d-block" alt="Dj en vivo">
+          </div>
+
+          <div class="main-text col-xl-6 col-lg-6 col-md-8 col-sm-10 text-left py-5">
+              <p class="anim-fade-in">Bienvenido</p>
+              <h2 class="text-light fw-bolder anim-left anim-pause-1">Somos RQS</h2>
+              <h3 class="fw-bolder pb-3 anim-right anim-pause-1">Expertos en diversión!</h3>
+              <p class="fs-5 text-light py-2 anim-left anim-pause-2">
+                  Nuestra pasión es llevar la música y la diversión a tus eventos, por lo que ofrecemos una amplia
+                  gama de servicios de entretenimiento y alquiler de equipos audiovisuales de alta calidad. Desde las
+                  vibrantes luces que iluminarán la pista de baile hasta los más potentes amplificadores que harán vibrar la
+                  sala, así como un servicio de banquetería excepcional y animación cautivadora, tenemos todo lo que
+                  necesitas para crear un ambiente espectacular.
+              </p>
+              <div class="pt-5 anim-fade-in anim-pause-3">
+                  <a href="https://wa.me/56972140096" target="_blank" rel="noopener noreferrer">
+                      <button class="btn fs-5 py-2 px-5 mx-auto">Contáctanos <i class="bi bi-whatsapp"></i></button>
+                  </a>
+              </div>
+          </div>
+      </div>
     </section>
 
 
@@ -124,33 +158,7 @@
     </section>
 
 
-    <!--bienvenido/nosotros-->
-    <section class="main py-5 paused" id="nosotros">
-        <div class="main-cont d-flex flex-wrap justify-content-evenly align-items-center py-5">
-
-            <div class="col-xl-4 col-md-6 main-img py-5 anim-right">
-                <img src="./assets/img/bienvenido.jpeg" class="w-100 d-block" alt="Dj en vivo">
-            </div>
-
-            <div class="main-text col-xl-6 col-lg-6 col-md-8 col-sm-10 text-left py-5">
-                <p class="anim-fade-in">Bienvenido</p>
-                <h2 class="text-light fw-bolder anim-left anim-pause-1">Somos RQS</h2>
-                <h3 class="fw-bolder pb-3 anim-right anim-pause-1">Expertos en diversión!</h3>
-                <p class="fs-5 text-light py-2 anim-left anim-pause-2">
-                    Nuestra pasión es llevar la música y la diversión a tus eventos, por lo que ofrecemos una amplia
-                    gama de servicios de entretenimiento y alquiler de equipos audiovisuales de alta calidad. Desde las
-                    vibrantes luces que iluminarán la pista de baile hasta los más potentes amplificadores que harán vibrar la
-                    sala, así como un servicio de banquetería excepcional y animación cautivadora, tenemos todo lo que
-                    necesitas para crear un ambiente espectacular.
-                </p>
-                <div class="pt-5 anim-fade-in anim-pause-3">
-                    <a href="https://wa.me/56972140096" target="_blank" rel="noopener noreferrer">
-                        <button class="btn fs-5 py-2 px-5 mx-auto">Contáctanos <i class="bi bi-whatsapp"></i></button>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
 
     <!--COMPROMISO-->
