--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <h5 class="py-3"><em>Enriqueciendo aún más tu experiencia, ofrecemos servicios complementarios de
                         <span class="fw-bolder">Animación</span>
                         y <span class="fw-bolder">Banquetería</span>.<br><br>
-                        ¡Añade un toque de distinción a tus eventos y asegura momentos memorables!</em>
+                        ¡Añade un toque de distinción a tus eventos y asegura momentos inolvidables!</em>
                 </h5>
                 <div class="d-flex gap-2">
                     <img src="./assets/img/microfono.jpg" class="img-animacion d-block w-100" alt="animación eventos">
