cambia color nav expandido y cerrado

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav fs-5 ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="#">Inicio</a>
                     <a class="nav-link" href="#servicios">Servicios</a>
                     <a class="nav-link" href="#packs">Packs</a>
                     <a class="nav-link" href="#galeria">Galería</a>
@@ -704,5 +704,7 @@
         </div>
     </footer>
 </body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </html>
