--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 
 
-    <!--header-->
+    <!--HEADER/VIDEO/TITULO PRINCIPAL-->
     <section class="header">
         <div class="container title d-flex flex-column text-light justify-content-center mx-auto py-5">
             <div class="text-center pt-5 mt-3 title-1">
@@ -88,7 +88,7 @@
     </section>
 
     
-    <!--3 img-->
+    <!--3 IMAGENES-->
     <section class="hero bg-black py-5 paused">
         <div class="d-flex justify-content-center align-items-center py-5 my-5 mx-auto">
             <div class="col-lg-3 col-md-3 col-sm-3 anim-down">
@@ -131,7 +131,7 @@
     </section>
 
 
-    <!--bienvenido/nosotros-->
+    <!--NOSOTROS-->
     <section class="main py-3  paused" id="nosotros">
         <div class="main-cont d-flex flex-wrap justify-content-evenly align-items-center py-5">
 
@@ -159,12 +159,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
 
 
     <!--COMPROMISO-->
