correccion scroll main

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
 
     <!--NOSOTROS-->
-    <section class="main py-3  paused" id="nosotros">
+    <section class="main py-3 paused" id="nosotros">
         <div class="main-cont d-flex flex-wrap justify-content-evenly align-items-center py-5">
 
-            <div class="col-xl-4 col-md-6 main-img py-5 anim-right">
+            <div class="col-xl-4 col-md-6 col-sm-6 main-img py-5 anim-right">
                 <img src="./assets/img/bienvenido.jpeg" class="w-100 d-block" alt="Dj en vivo">
             </div>
 
@@ -307,7 +307,7 @@
                     </div>
                 </div>
 
-                <div class="py-5 mb-4 text-end anim-left anim-pause-4">
+                <div class="py-5 mb-4 text-end anim-left anim-pause-4 info-text-btn">
                     <h3 class="fw-bold">Crearemos momentos inolvidables!</h3>
                     <a href="https://wa.me/56972140096" target="_blank" rel="noopener noreferrer">
                         <button class="btn fs-5 py-2 px-5 mx-auto">Contacto <i class="bi bi-whatsapp"></i></button>
